--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://strawroux.github.io",
+  "homepage": "https://strawroux.github.io/albion-build-planner",
   "name": "albion-build-planner",
   "version": "0.1.0",
   "private": true,
